[gd_scene load_steps=9 format=3 uid="uid://f475vqxfghop"]

[ext_resource type="Script" path="res://IceCream/Blender/Blender.gd" id="1_p17b4"]
[ext_resource type="Texture2D" uid="uid://c20tq5f78v441" path="res://IceCream/Resources/Blender.tres" id="2_27ah7"]
[ext_resource type="Texture2D" uid="uid://bhbvgyvkfv5ht" path="res://IceCream/Resources/Aim.tres" id="3_aanm8"]
[ext_resource type="Texture2D" uid="uid://ck4a3en8mpadc" path="res://IceCream/Resources/WandBody.tres" id="3_kqdrf"]
[ext_resource type="Texture2D" uid="uid://kmhcwq7sf5hc" path="res://IceCream/Resources/Goal.tres" id="3_n2dv5"]
[ext_resource type="PackedScene" uid="uid://d201w05v3y3ft" path="res://IceCream/Blender/Wand.tscn" id="4_kgox5"]
[ext_resource type="SpriteFrames" uid="uid://wa8ydlbfm8ot" path="res://IceCream/Resources/WandHeadFrames.tres" id="4_y5us1"]
[ext_resource type="Texture2D" uid="uid://dw1rswuhlpybf" path="res://IceCream/Resources/Sheild.tres" id="6_10ag1"]

[node name="Blender" type="Node2D"]
texture_filter = 1
script = ExtResource("1_p17b4")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(176, 0)
texture = ExtResource("2_27ah7")
centered = false
region_rect = Rect2(27, 0, 133, 180)

[node name="WandStick" type="Sprite2D" parent="."]
position = Vector2(215, -50)
texture = ExtResource("3_kqdrf")
centered = false

[node name="WandHead" type="AnimatedSprite2D" parent="WandStick"]
sprite_frames = ExtResource("4_y5us1")
centered = false
offset = Vector2(1, 112)

[node name="Wand" parent="." instance=ExtResource("4_kgox5")]
position = Vector2(75, 99)

[node name="Sheild" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.607843)
position = Vector2(186, 0)
texture = ExtResource("6_10ag1")
centered = false

[node name="VerticalController" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(24, 180)
offset_left = 160.0
offset_right = 184.0
offset_bottom = 180.0
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VerticalController"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2

[node name="Goal" type="TextureRect" parent="VerticalController/PanelContainer"]
layout_mode = 2
texture = ExtResource("3_n2dv5")

[node name="Aim" type="TextureRect" parent="VerticalController/PanelContainer"]
layout_mode = 2
texture = ExtResource("3_aanm8")

[node name="PanelContainer2" type="PanelContainer" parent="VerticalController"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="VerticalController"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2

[node name="PanelContainer4" type="PanelContainer" parent="VerticalController"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2

[node name="PanelContainer5" type="PanelContainer" parent="VerticalController"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
